--- a/src/App.css
+++ b/src/App.css
@@ -20,10 +20,19 @@ body {
   margin-top: 20px;
   margin-bottom: 20px;
   padding: 8px 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 }
 
 .new-item {
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
+  align-items: center;
+  justify-content: flex-start;
+  padding-left: 25%;
+}
+
+.Form-Input {
+  display: flex;
+  justify-content: space-evenly;
 }
